# ppp-modeling

./: .gitignore  .hgignore  .pylintrc  LICENSE  README.md  makebook.py  pyproject.toml
book/: Nemilov.cls  chapter-template.tex  main-template.tex
book-src/: main-template.tex
ch01/: minigolf.py  moths.py
ch01/assorted/: calculating_pi.py  cannon.py  fallball.py  galton.py  langton.py  life.py  lissajous.py  traffic.py
ch01/devices/: robot.py  seasons.py  snowflakes.py  textgen.py  ttt_champion.py
ch01/gravity/: cannonball.py  lissajous.py  orrery.py
ch01/grid/: evolution.py
ch01/living/: boids.py  commons.py  evolution.py  fire.py  lsystems.py  moth.py  pigeon.py  rabbits.py  ringworm.py
ch01/motion/: boyle.py  brown.py  central_collision.py  free_kick.py  ideal_gas.py  idealgas_simple.py  molecule.py  thermodynamics.py  very_ideal_gas.py  very_idealgas.py
ch01/stochastic/: bus.py  cities.py  galton.py  pig.py  zipf.py
src/devices/: fsm.py  needle.py  seasons.py  textgen.py  time_fsm.py  ttt_champion.py  weather.py
src/gravity/: cannonball.py  jumpball.py  spirograph.py
src/grid/: disease.py  evolution.py  fire.py  langton.py  life.py  rabbits.py  ringworm.py  snowflakes.py
src/living/: boids.py  dancing_moth.py  lsystems.py
src/motion/: boyle.py  brown.py  free_kick.py  molecule.py  thermodynamics.py  very_ideal_gas.py
src/stochastic/: calculating_pi.py  cities.py  monty.py  traffic.py  zipf.py
